package backend.model.achievement;

public interface Achievement {
    AchievementName getName();
    AchievementContents getContents();
}
