@startuml

skinparam monochrome true
hide empty members

class BackendController
BackendController --> Logic.ResumeSaver
BackendController --> Logic.ResumeGenerator
BackendController *-- "1" Model.Person
BackendController *-- "1" Storage.Storage

namespace Storage {

interface Storage
class StorageImpl
Storage <|.. StorageImpl

class JsonPersonSerializer
StorageImpl --> JsonPersonSerializer
JsonPersonSerializer --> Model.Person

class JsonPersonBuilder
StorageImpl --> JsonPersonBuilder
JsonPersonBuilder --> Model.PersonImpl

}

namespace Logic {

interface ResumeSaver
class ResumeSaverImpl
ResumeSaver <|.. ResumeSaverImpl
ResumeSaverImpl --> Model.Resume

interface ResumeGenerator
class ResumeGeneratorImpl
class AchievementSelector

ResumeGenerator <|.. ResumeGeneratorImpl
ResumeGeneratorImpl *-- "1" AchievementSelector
ResumeGeneratorImpl --> Model.ResumeImpl
ResumeGeneratorImpl --> Model.AchievementList
}

namespace Model {

interface Person
class PersonImpl {
    PersonName name
}
Person <|.. PersonImpl
PersonImpl *-- "1" AchievementList
PersonImpl *-- "1" ResumeList

interface Achievement
class PersonalProject {
    AchievementName name
    AchievementDescription description
}
interface AchievementList
class AchievementListImpl
Achievement <|.. PersonalProject
AchievementList <|.. AchievementListImpl
AchievementListImpl o-- "*" Achievement

interface Resume
class ResumeImpl {
    ResumeName name
    ResumeContents contents
}
interface ResumeList
class ResumeListImpl
Resume <|.. ResumeImpl
ResumeList <|.. ResumeListImpl
ResumeListImpl o-- "*" Resume

}

@enduml